--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,32 @@
-discord.py
+aiohttp==3.6.3
+akinator.py==4.0.1
+async-timeout==3.0.1
+attrs==20.2.0
+bella==2.1.5
+certifi==2020.6.20
+chardet==3.0.4
+dataclasses-json==0.5.2
+discord==1.0.1
+discord.py==1.5.1
+fire==0.3.1
+idna==2.10
+isodate==0.6.0
+marshmallow==3.9.0
+marshmallow-enum==1.5.1
+multidict==4.7.6
+mypy-extensions==0.4.3
+oauthlib==3.1.0
+python-youtube==0.6.4
+pytube3==9.6.4
+requests==2.24.0
+requests-oauthlib==1.3.0
+six==1.15.0
+stringcase==1.2.0
+termcolor==1.1.0
+typing-extensions==3.7.4.3
+typing-inspect==0.6.0
+ujson==4.0.1
+urllib3==1.25.11
+websockets==8.1
+yarl==1.5.1
+ytdl==1.0.0rc5
